--- a/petfinder_app/pubspec.yaml
+++ b/petfinder_app/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.1.0
+  flutter_bloc: ^9.1.1
+  dio: ^5.9.0
+  get_it: ^8.2.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
