--- a/petfinder_app/pubspec.yaml
+++ b/petfinder_app/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   dio: ^5.9.0
   get_it: ^8.2.0
   cached_network_image: ^3.4.1
+  mocktail: ^1.0.4
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
