--- a/petfinder_app/pubspec.yaml
+++ b/petfinder_app/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cached_network_image: ^3.4.1
   mocktail: ^1.0.4
   http: ^1.5.0
+  firebase_core: ^4.2.0
 
 dev_dependencies:
   flutter_test:
