--- a/petfinder_app/android/app/build.gradle
+++ b/petfinder_app/android/app/build.gradle
@@ -33,6 +33,26 @@ android {
         versionName = flutter.versionName
     }
 
+    flavorDimensions += "default"
+    productFlavors {
+        create("development") {
+            dimension = "default"
+            resValue(
+                type = "string",
+                name = "app_name",
+                value = "Flavors development")
+            applicationIdSuffix = ".dev"
+        }
+        create("production") {
+            dimension = "default"
+            resValue(
+                type = "string",
+                name = "app_name",
+                value = "Flavors production")
+            
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
